--- a/GamingSystemsA3/GamingSystemsA3.vcxproj.filters
+++ b/GamingSystemsA3/GamingSystemsA3.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Reflection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Picking.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Reflection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Picking.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
