--- a/GamingSystemsA3/GamingSystemsA3.vcxproj
+++ b/GamingSystemsA3/GamingSystemsA3.vcxproj
@@ -153,8 +153,8 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="Picking.cpp" />
-    <ClCompile Include="Reflection.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -164,9 +164,10 @@
     <ClInclude Include="Headers.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="Picking.h" />
-    <ClInclude Include="Reflection.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
